Fixed content jump on image loaded

--- a/app/assets/styles/_effects.sass
+++ b/app/assets/styles/_effects.sass
@@ -26,6 +26,7 @@
 
   animation-duration: .8s
   animation-fill-mode: both
+  opacity: 1
 
 @keyframes revealFromLeft
   0%
