--- a/app/assets/styles/_reveal-on-scroll.sass
+++ b/app/assets/styles/_reveal-on-scroll.sass
@@ -1,9 +1,6 @@
 .reveal-on-scroll
     opacity: 0
 
-    &--visible
-        opacity: 1
-
     &--fade-in-left
         +reveal('left')
 
